--- a/resources/sass/templates/_sidebar.scss
+++ b/resources/sass/templates/_sidebar.scss
@@ -1,11 +1,12 @@
 #sidebar {
 	margin-left: 2.5rem;
+	margin-top: -0.5rem;
 	height: fit-content;
 	min-width: 20rem;
 	position: sticky;
 	color: white;
 	width: 20rem;
-	top: 6rem; // 4rem from navbar height plus content padding;
+	top: 5.5rem;
 	flex: 1;
 
 	.sidebar-border {
